InternexDev_Sandbox/src/objects/SearchFilterConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>RestrictedFields__c</fullName>
        <label>RestrictedFields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchFields__c</fullName>
        <label>SearchFields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reRenderBlock__c</fullName>
        <label>reRenderBlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sectionTitle__c</fullName>
        <label>sectionTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SearchFilterConfig</label>
</CustomObject>